# zzz

./: 2021-2  2022-1  2022-2  2023-1  2023-2
2023-2/: Formulario-de-postulacion-IPRE-Verano-2024-1-Bernardita Rosas.doc
2023-2/IA/: T4 (1).ipynb
2023-2/Inferencia/: README.md
2024-1/: Annex1_agent extern_erasmus_spanish.docx  Formulario_de_Informe Final_IPRE_Verano_2024.docx
No se puede subir/2023-1-grupo-46/: .gitignore  Gemfile  README.md
No se puede subir/grupo_WebgardiumLeviosa_backend/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
No se puede subir/grupo_WebgardiumLeviosa_frontend/: .eslintrc.json  .gitignore  README.md  (+4 more)
No se puede subir/heat-waves-predictor/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
No se puede subir/heat-waves-predictor/.github/: pull_request_template.md
No se puede subir/heat-waves-predictor/.github/workflows/: lints.yml
No se puede subir/heat-waves-predictor/docs/: README.md  USAGE.md
No se puede subir/heat-waves-predictor/notebooks/hcarrillo/: Hugo-get_dew_point_and_temperature.ipynb  Hugo-test_a_second_def.ipynb  Hugo-test_a_second_def_more_stations.ipynb  extreme_threshold copy.ipynb
No se puede subir/heat-waves-predictor/notebooks/msmendoza/: check_sources.ipynb  era5_client.ipynb  extreme_threshold.ipynb  get_current_day_data.ipynb  get_dew_point.ipynb  get_meteochile_data.ipynb  get_stations_id.ipynb  nc_to_parquet.ipynb  read_netcdf.ipynb  sftp_client.ipynb  stations_location.ipynb  stations_mk_test.ipynb  stations_season_div.ipynb  stations_ts_gap.ipynb
No se puede subir/heat-waves-predictor/notebooks/tutorials/: ingestor.ipynb  preprocessor.ipynb  reporter.ipynb
No se puede subir/heat-waves-predictor/notebooks/vespinoza/: get_data_cluster 2.ipynb
No se puede subir/heat-waves-predictor/scripts/: get_era5_data.py
No se puede subir/heat-waves-predictor/src/pipeline/: config.ini  pipeline.py  pipeline_components.py
No se puede subir/heat-waves-predictor/src/utils/: __init__.py  data_has_gaps.py  html_table_to_xlsx.py
(+276 files in other folders)
