[tool.poetry]
name = "hw-predictor"
version = "0.0.1"
description = "Heat waves predictor for meteorological stations in Chile"
authors = ["Mauro Mendoza <msmendoza@uc.cl>"]
repository = "https://github.com/weather-pred-org/heat-waves-predictor"
keywords = ["heatwaves", "prediction", "meteorology", "weather", "forecasting"]
packages = [
    {include = "ingestor", from = "hw_predictor/components"},
]

[tool.poetry.dependencies]
python = "3.11.x"
pip = "^23.1.2"
setuptools = "^67.7.2"
wheel = "^0.40.0"
cdsapi = "^0.6.1"
geopandas = "^0.13.2"
html5lib = "^1.1"
kfp = "^2.6.0"
kubernetes = "^26"
loguru = "^0.7.0"
netcdf4 = "^1.6.3"
numpy = "^1.24.3"
pandas = "^2.0.1"
paramiko = "^3.3.1"
pyarrow = "^12.0.0"
pymannkendall = "^1.4.3"
requests = "^2.29.0"
scikit-learn = "^1.3.0"
scipy = "^1.10.1"
seaborn = "^0.12.2"
shapely = "^2.0.1"
tqdm = "^4.66.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
flake8 = "^6.0.0"
flake8-isort = "^6.0.0"
folium = "^0.14.0"
isort = "^5.12.0"
jupyter = "^1.0.0"
lxml = "^4.9.2"
mapclassify = "^2.6.0"
mypy = "^1.5.1"
openpyxl = "^3.1.2"
pre-commit = "^3.3.1"
ruff = "^0.1.4"

[tool.poetry.group.test.dependencies]
coverage = "^7.2.5"
pytest = "^7.3.1"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
lines_after_imports = 2

[tool.ruff]
line-length = 100
select = [
    "E", # pycodesstyle
    "F", # pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
fixable = [
    "I", # for safety reasons we will only fix isort, and lint the other rules
]
target-version = "py311"
ignore = [
    "B905", # zip-without-explicit-strict
    "F401", # imported but unused
]
exclude = [
    ".git",
    ".github",
    ".mypy_cache",
    ".venv",
    ".vscode",
    "notebooks",
    "ruff_cache",
]

[tool.ruff.isort]
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
